add config server for managing configs

--- a/config-client.yml
+++ b/config-client.yml
@@ -1,5 +1,5 @@
 spring:
   cloud:
     config:
-      allow-override: true
-      override-none: true
+      allow-override: true # allow overrides of the configuration
+      override-none: true # do not allow any overrides
