add user config data

--- a/news-to-kafka-elasticQuery.yml
+++ b/news-to-kafka-elasticQuery.yml
@@ -12,3 +12,8 @@ elastic-config:
 
 elastic-query-config:
   field: text
+
+user-config:
+    username: user
+    password: password
+    roles: USER
