add swagger and api docs

--- a/news-to-kafka-elasticQuery.yml
+++ b/news-to-kafka-elasticQuery.yml
@@ -17,3 +17,12 @@ user-config:
     username: user
     password: password
     roles: USER
+
+spring-doc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+
+security:
+  path-to-ignore: /api-docs
