add new config in query web client

--- a/news-spring-elasticQueryWebClient.yml
+++ b/news-spring-elasticQueryWebClient.yml
@@ -14,6 +14,9 @@ elastic-query-web-client-service-config:
     write-timeout-ms: 30000
     max-in-memory-size: 10MB
     base-url: 'http://elastic-query-service/elastic-query/documents'
+  query-by-text:
+    method: POST
+    url: "/get-document-by-value"
 
 user-config:
     username: user
