calling elastic query directly

--- a/news-spring-elasticQueryWebClient.yml
+++ b/news-spring-elasticQueryWebClient.yml
@@ -13,7 +13,7 @@ elastic-query-web-client-service-config:
     read-timeout-ms: 30000
     write-timeout-ms: 30000
     max-in-memory-size: 10MB
-    base-url: 'http://elastic-query-service/elastic-query/documents'
+    base-url: 'http://localhost:8182/elastic-query/documents'
   query-by-text:
     method: POST
     url: "/get-document-by-value"
