add new config for security with keycloak

--- a/config-elastic-query.yml
+++ b/config-elastic-query.yml
@@ -10,6 +10,7 @@ spring:
         jwt:
           issuer-uri: http://localhost:8189/auth/realms/microservices_realm
           jwt-set-uri: http://localhost:8189/auth/realms/microservices_realm/protocol/openid-connect/certs
+          audience: elastic-query-service
 
 elastic-config:
   index-name: news-index
