--- a/config-elastic-query.yml
+++ b/config-elastic-query.yml
@@ -11,6 +11,22 @@ spring:
           issuer-uri: http://localhost:8189/auth/realms/microservices_realm
           jwt-set-uri: http://localhost:8189/auth/realms/microservices_realm/protocol/openid-connect/certs
           audience: elastic-query-service
+  jpa:
+    open-in-view: false
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgresSQL9Dialect
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgresSQL9Dialect
+  datasource:
+    url: jdbc://postgresql://localhost:5432/postgres?currentSchema=public$binaryTransform=true&reWriteBatchInserts=true
+    username: admin
+    password: 123
+    driver-class-name: org.postgresql.Driver
+    platform: postgres
+    schema: classpath:init-schema.sql
+    data: classpath:init-data.sql
+    initialization-mode: always
 
 elastic-config:
   index-name: news-index
