--- a/config-elastic-query.yml
+++ b/config-elastic-query.yml
@@ -14,10 +14,10 @@ spring:
   jpa:
     open-in-view: false
     show-sql: true
-    database-platform: org.hibernate.dialect.PostgresSQL9Dialect
+    database-platform: org.hibernate.dialect.PostgreSQL9Dialect
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgresSQL9Dialect
+        dialect: org.hibernate.dialect.PostgreSQL9Dialect
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres?currentSchema=public$binaryTransform=true&reWriteBatchInserts=true
     username: admin
