--- a/config-elastic-query.yml
+++ b/config-elastic-query.yml
@@ -14,19 +14,20 @@ spring:
   jpa:
     open-in-view: false
     show-sql: true
-    database-platform: org.hibernate.dialect.PostgreSQL9Dialect
+    hibernate:
+      ddl-auto: none # Important when using schema.sql
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQL9Dialect
+        default_schema: public
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=public$binaryTransform=true&reWriteBatchInserts=true
+    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=public&binaryTransform=true&reWriteBatchInserts=true
     username: admin
     password: 123
     driver-class-name: org.postgresql.Driver
-    platform: postgres
+    initialization-mode: always
     schema: classpath:init-schema.sql
     data: classpath:init-data.sql
-    initialization-mode: always
 
 elastic-config:
   index-name: news-index
