--- a/config-elastic-query-web-client.yml
+++ b/config-elastic-query-web-client.yml
@@ -7,6 +7,21 @@ spring:
   thymeleaf:
     cache: false # disable cache during development
 
+  security:
+    oauth2:
+      client:
+        registration:
+          keycloak:
+            client-id: 'elastic-query-web-client'
+            client-secret: '7c8603b1-f78a-448d-a3bf-6fd670477d52'
+            authorization-grant-type: authorization_code
+            redirect-uri: '{baseUrl}/login/oauth2/code/{registrationId}'
+            scope:
+              - openid
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:8189/auth/realms/microservices_realm
+
 elastic-query-web-client-service-config:
   webclient:
     connection-timeout-ms: 10000
