add new changes for kafka stream

--- a/config-news-to-kafka.yml
+++ b/config-news-to-kafka.yml
@@ -20,6 +20,7 @@ kafka-config:
   topic-name: news-topic
   topic-names-to-create:
     - news-topic
+    - news-analytics-topic
   num-of-partitions: 3 # 3 partitions
   replication-factor: 3 # 3 brokers
 
