change audience variable in kafka-streams

--- a/config-kafka-streams.yml
+++ b/config-kafka-streams.yml
@@ -10,7 +10,7 @@ spring:
         jwt:
           issuer-uri: http://localhost:8189/auth/realms/microservices_realm
           jwk-set-uri: http://localhost:8189/auth/realms/microservices_realm/protocol/openid-connect/certs
-          audience: kafka-streams-service
+          audience: kafka-stream-service
 
 user-config:
     username: user
