--- a/config-elastic-query.yml
+++ b/config-elastic-query.yml
@@ -11,6 +11,15 @@ spring:
           issuer-uri: http://localhost:8189/auth/realms/microservices_realm
           jwk-set-uri: http://localhost:8189/auth/realms/microservices_realm/protocol/openid-connect/certs
           audience: elastic-query-service
+      client:
+        registration:
+          keycloak:
+            client-id: 'elastic-query-service'
+            client-secret: '8e7670ea-04f4-4e41-8738-8d114e1e67c2'
+            authorization-grant-type: client_credential
+        provider:
+          keycloak:
+            tokenUri: http://localhost:8189/auth/realms/microservices_realm/protocol/openid-connect/token
 
   jpa:
     open-in-view: false
@@ -46,6 +55,15 @@ elastic-query-config:
 
 elastic-query-service-config:
   custom-audience: elastic-query-service
+  webclient:
+    connection-timeout-ms: 10000
+    read-timeout-ms: 30000
+    write-timeout-ms: 30000
+    max-in-memory-size: 10MB
+    query-type: 'KAFKA_STATE_STORE'
+  query-from-kafka-state-store:
+    method: GET
+    url: "http://localhost:8184/kafka-streams/get-word-count-by-word/{word}"
 
 user-config:
     username: user
