--- a/config-elastic-query-web-client.yml
+++ b/config-elastic-query-web-client.yml
@@ -28,10 +28,10 @@ elastic-query-web-client-service-config:
     read-timeout-ms: 30000
     write-timeout-ms: 30000
     max-in-memory-size: 10MB
-    base-url: 'http://localhost:8182/elastic-query/documents'
+    base-url: http://localhost:8182/elastic-query/documents
   query-by-text:
     method: POST
-    url: "/get-document-by-value"
+    url: /get-document-by-value
 
 user-config:
     username: user
