--- a/config-analytics.yml
+++ b/config-analytics.yml
@@ -47,7 +47,7 @@ kafka-config:
   bootstrap-servers: localhost:19092, localhost:29092, localhost:39092
   schema-registry-url-key: schema.registry.url
   schema-registry-url: http://localhost:8190
-  topic-name: news-topic
+  topic-name: news-analytics-topic
   topic-names-to-create:
     - news-topic
     - news-analytics-topic
